z-index to prevent blockquotes overlap

--- a/src/components/UI/Navigation/navigation-toggle.module.css
+++ b/src/components/UI/Navigation/navigation-toggle.module.css
@@ -7,6 +7,7 @@
 
   .toggle {
     --size: 40px;
+    z-index: 1000;
 
     display: grid;
     place-items: center;
